// Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.ledger.api.v1;

import "com/digitalasset/ledger/api/v1/trace_context.proto";
import "google/protobuf/duration.proto";


option java_outer_classname = "LedgerConfigurationServiceOuterClass";
option java_package = "com.digitalasset.ledger.api.v1";

// LedgerConfigurationService allows clients to subscribe to changes of the ledger configuration.
service LedgerConfigurationService {

  // Returns the latest configuration as the first response, and publishes configuration updates in the same stream.
  rpc GetLedgerConfiguration (GetLedgerConfigurationRequest) returns (stream GetLedgerConfigurationResponse);

}

message GetLedgerConfigurationRequest {

  // Must correspond to the ledger ID reported by the Ledger Identification Service.
  // Required
  string ledger_id = 1;

  // Server side tracing will be registered as a child of the submitted context.
  // This field is a future extension point and is currently not supported.
  // Optional
  TraceContext trace_context = 1000;
}

message GetLedgerConfigurationResponse {

  // The latest ledger configuration.
  LedgerConfiguration ledger_configuration = 1;
}

// LedgerConfiguration contains parameters of the ledger instance that may be useful to clients.
message LedgerConfiguration {

  // Minimum difference between ledger effective time and maximum record time in submitted commands.
  google.protobuf.Duration min_ttl = 1;

  // Maximum difference between ledger effective time and maximum record time in submitted commands.
  google.protobuf.Duration max_ttl = 2;
}
